Fix CS; Adjust context picker size on mobile to acommodate new font size; CSS fix to year picker on contexts with few years

--- a/frontend/styles/components/shared/dimensional-selector-react.scss
+++ b/frontend/styles/components/shared/dimensional-selector-react.scss
@@ -3,7 +3,11 @@
 
 .c-dimensional-selector {
   @extend %dropdown;
-  height: 275px;
+  height: 300px;
+
+  @media screen and (min-width: $breakpoint-foundation-small) {
+    height: 275px;
+  }
 
   .dimension-container {
     display: flex;
@@ -49,10 +53,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 25px;
+    height: 50px;
     width: 100%;
     background-color: $background-white;
     cursor: default;
+
+    @media screen and (min-width: $breakpoint-foundation-small) {
+      height: 25px;
+    }
 
     .dimensional-selector-footer-text {
       font-size: $font-size-x-regular;
